--- a/pom.xml
+++ b/pom.xml
@@ -20,20 +20,26 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>us.codecraft</groupId>
 			<artifactId>webmagic-core</artifactId>
 			<version>0.5.3</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>us.codecraft</groupId>
 			<artifactId>webmagic-extension</artifactId>
 			<version>0.5.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>forumspider</finalName>
 		<defaultGoal>install</defaultGoal>
@@ -43,7 +49,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12.4</version>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
